# ez-math

./: .gitignore  CMakeLists.txt  Preconfig.cmake  README.md
cmake/: preconfig.cmake
include/ez/math/: Complex.hpp  MathConstants.hpp  Polynomial.hpp  PsuedoRandom.hpp  Triangle.hpp  Trig.hpp  color.hpp  complex.hpp  constants.hpp  poly.hpp  prng.hpp  trig.hpp
test/: CMakeLists.txt  color.cpp  complex.cpp  hash.cpp  rng.cpp  solve.cpp  trig.cpp
test/basic/: CMakeLists.txt  basic.cpp  complex.cpp  hash.cpp  rng.cpp  solve.cpp  trig.cpp
test/color/: CMakeLists.txt  main.cpp
test/solvers/: CMakeLists.txt  solvers.cpp
